--- a/localisation/India.csv
+++ b/localisation/India.csv
@@ -1,13 +1,13 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-PROV1013;萝莉;;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+PROV1013;若利;;;;;;;;;;x
 PROV1112;摩菟来;;;;;;;;;;x
 PROV1113;查盖;;;;;;;;;;x
 PROV1114;摩呼耶陀补罗;;;;;;;;;;x
 PROV1115;朱罗曼陀罗;;;;;;;;;;x
 PROV1116;天伽斯;;;;;;;;;;x
-PROV1117;古里;;;;;;;;;;x
+PROV1117;伽梨古陀;;;;;;;;;;x
 PROV1118;曼耶补罗;;;;;;;;;;x
-PROV1119;建志补罗;;;;;;;;;;x
+PROV1119;犍志补罗;;;;;;;;;;x
 PROV1120;多伽头罗;;;;;;;;;;x
 PROV1121;优旃耆突伽;;;;;;;;;;x
 PROV1122;优陀耶耆厘;;;;;;;;;;x
@@ -26,8 +26,8 @@ PROV1134;菩弥伽;;;;;;;;;;x
 PROV1135;伐腊毗;;;;;;;;;;x
 PROV1136;垂罗伽;;;;;;;;;;x
 PROV1137;曼苏拉;;;;;;;;;;x
-PROV1138;巴卡尔;;;;;;;;;;x
-PROV1139;莫克兰;;;;;;;;;;x
+PROV1138;跋伽罗;;;;;;;;;;x
+PROV1139;摩憍兰;;;;;;;;;;x
 PROV1140;婆拿婆赐;;;;;;;;;;x
 PROV1141;憍罗;;;;;;;;;;x
 PROV1142;波罗提湿檀那;;;;;;;;;;x
@@ -50,7 +50,7 @@ PROV1158;毗陀罗;;;;;;;;;;x
 PROV1159;罗摩耆厘;;;;;;;;;;x
 PROV1160;罗耶补罗;;;;;;;;;;x
 PROV1161;迦湿弥罗;;;;;;;;;;x
-PROV1162;拘尸那城;;;;;;;;;;x
+PROV1162;拘尸那迦;;;;;;;;;;x
 PROV1163;波罗奈;;;;;;;;;;x
 PROV1164;藻罗迦罗;;;;;;;;;;x
 PROV1165;般都迦陀;;;;;;;;;;x
@@ -71,9 +71,9 @@ PROV1179;奢羯罗;;;;;;;;;;x
 PROV1180;优多般陀;;;;;;;;;;x
 PROV1181;奥什鲁珊娜;;;;;;;;;;x
 PROV1182;伽色尼;;;;;;;;;;x
-PROV1183;博斯特;;;;;;;;;;x
-PROV1184;卡拉特;;;;;;;;;;x
-PROV1185;喀布尔;;;;;;;;;;x
+PROV1183;钵尸陀;;;;;;;;;;x
+PROV1184;迦罗陀;;;;;;;;;;x
+PROV1185;迦布罗;;;;;;;;;;x
 PROV1186;赭石;;;;;;;;;;x
 PROV1187;昆都士;;;;;;;;;;x
 PROV1188;珂咄罗;;;;;;;;;;x
@@ -121,7 +121,7 @@ PROV1230;苏伐剌那补罗;;;;;;;;;;x
 PROV1231;毗罗奢;;;;;;;;;;x
 PROV1232;密提那城;;;;;;;;;;x
 PROV1233;七村;;;;;;;;;;x
-PROV1234;昙民;;;;;;;;;;x
+PROV1234;昙民憍;;;;;;;;;;x
 PROV1235;多摩梨;;;;;;;;;;x
 PROV1236;月洲;;;;;;;;;;x
 PROV1237;罗奢罗波;;;;;;;;;;x
@@ -144,7 +144,7 @@ PROV1254;吠罗伽罗;;;;;;;;;;x
 PROV1255;吠牟罗婆多;;;;;;;;;;x
 PROV1256;乌兰伽楼;;;;;;;;;;x
 PROV1257;弥陀迦;;;;;;;;;;x
-PROV1258;难敌;;;;;;;;;;x
+PROV1258;楠代德;;;;;;;;;;x
 PROV1259;婆蹉瞿罗摩;;;;;;;;;;x
 PROV1260;那尸佉;;;;;;;;;;x
 PROV1261;波剌那吉多;;;;;;;;;;x
@@ -169,7 +169,7 @@ PROV1279;卢诃那;;;;;;;;;;x
 PROV1280;戈贾姆;;;;;;;;;;x
 PROV1281;旃罗那提利;;;;;;;;;;x
 PROV1282;多塔沃;;;;;;;;;;x
-PROV1283;阿斯尼;;;;;;;;;;x
+PROV1283;阿尸尼;;;;;;;;;;x
 PROV1284;婆楼梨;;;;;;;;;;x
 PROV1285;不动城;;;;;;;;;;x
 PROV1286;稽剌罗;;;;;;;;;;x
@@ -268,7 +268,7 @@ PROV1381;奔那伐弹那;;;;;;;;;;x
 PROV1413;吠那菟;;;;;;;;;;x
 PROV1414;屈多娑罗;;;;;;;;;;x
 PROV1415;毗多补罗;;;;;;;;;;x
-PROV1416;戈尔哈布尔;;;;;;;;;;x
+PROV1416;憍罗诃补罗;;;;;;;;;;x
 PROV1417;瓦格;;;;;;;;;;x
 PROV1418;诃卢毗湿伐罗;;;;;;;;;;x
 PROV1419;弥萨罗;;;;;;;;;;x
@@ -287,7 +287,7 @@ PROV1431;讹答剌;;;;;;;;;;x
 PROV1432;葛逻逯;;;;;;;;;;x
 PROV1433;哈萨克;;;;;;;;;;x
 PROV1434;巴尔喀什;;;;;;;;;;x
-PROV1435;乞马克;;;;;;;;;;x
+PROV1435;基马克;;;;;;;;;;x
 PROV1436;拉科美尔扎;;;;;;;;;;x
 PROV1437;提格利尼亚;;;;;;;;;;x
 PROV908;鲁卜哈利沙漠;;;;;;;;;;x
@@ -518,7 +518,7 @@ d_kerman;克尔曼;;;;;;;;;;x
 d_kerman_adj;克尔曼;;;;;;;;;;x
 k_gandhara;犍陀罗;;;;;;;;;;x
 k_gandhara_adj;犍陀罗;;;;;;;;;;x
-d_kabul;喀布里斯坦;;;;;;;;;;x
+d_kabul;喀布尔斯坦;;;;;;;;;;x
 d_kabul_adj;喀布尔;;;;;;;;;;x
 c_ghazna_adj;伽色尼;;;;;;;;;;x
 c_kabul_adj;喀布尔;;;;;;;;;;x
@@ -664,10 +664,10 @@ b_zhezkazgan;杰兹卡兹甘;;;;;;;;;;x
 b_karsakpay;卡尔萨克帕伊;;;;;;;;;;x
 b_jezkazgan;杰兹卡兹汗;;;;;;;;;;x
 b_kengir;肯吉尔;;;;;;;;;;x
-d_kimak;乞马克;;;;;;;;;;x
-d_kimak_adj;乞马克;;;;;;;;;;x
-c_kimak_adj;乞马克;;;;;;;;;;x
-b_kimak;乞马克;;;;;;;;;;x
+d_kimak;基马克;;;;;;;;;;x
+d_kimak_adj;基马克;;;;;;;;;;x
+c_kimak_adj;基马克;;;;;;;;;;x
+b_kimak;基马克;;;;;;;;;;x
 b_tengiz;田吉兹;;;;;;;;;;x
 b_atasu;阿塔苏;;;;;;;;;;x
 b_arkalyk;阿尔卡雷克;;;;;;;;;;x
@@ -746,7 +746,7 @@ k_malwa;摩腊婆;;;;;;;;;;x
 d_dadhipadra;阿槃底;;;;;;;;;;x
 d_akara_dasarna;阿伽罗达萨那;;;;;;;;;;x
 d_anupa;阿耨钵;;;;;;;;;;x
-k_kosala;骄萨罗;;;;;;;;;;x
+k_kosala;憍萨罗;;;;;;;;;;x
 d_kanyakubja;曲女城;;;;;;;;;;x
 d_saryupara;萨由波罗;;;;;;;;;;x
 d_jejakabhukti;祇奢伽伏帝;;;;;;;;;;x
@@ -905,7 +905,7 @@ b_udayavara;尤陀耶伐罗;;;;;;;;;;x
 b_udupi;尤杜毗;;;;;;;;;;x
 b_mangalur;曼迦卢尔;;;;;;;;;;x
 b_dharmasthala;陀摩多罗;;;;;;;;;;x
-b_kasargod;伽萨罗的;;;;;;;;;;x
+b_kasargod;伽萨罗;;;;;;;;;;x
 b_kadarika;伽陀利迦;;;;;;;;;;x
 c_kalyani;伽莲尼;;;;;;;;;;x
 c_kalyani_adj;伽莲尼;;;;;;;;;;x
@@ -1152,9 +1152,9 @@ b_satgaon;萨尔贡;;;;;;;;;;x
 b_lonar;洛纳尔;;;;;;;;;;x
 b_manora;马诺拉;;;;;;;;;;x
 b_nandura;南杜罗;;;;;;;;;;x
-c_nanded;难敌;;;;;;;;;;x
-c_nanded_adj;难敌;;;;;;;;;;x
-b_nanded;难敌;;;;;;;;;;x
+c_nanded;楠代德;;;;;;;;;;x
+c_nanded_adj;楠代德;;;;;;;;;;x
+b_nanded;难底陀;;;;;;;;;;x
 b_aurad;奥罗德;;;;;;;;;;x
 b_qandhar;坎达哈;;;;;;;;;;x
 b_shelgaon;施尔冈;;;;;;;;;;x
@@ -1184,9 +1184,9 @@ b_tuljapur;图尔贾普尔;;;;;;;;;;x
 b_paranda;帕兰达;;;;;;;;;;x
 b_karmala;卡尔马拉;;;;;;;;;;x
 b_dharaseo;达拉斯;;;;;;;;;;x
-c_kolhapur;戈尔哈布尔;;;;;;;;;;x
-c_kolhapur_adj;戈尔哈布尔的;;;;;;;;;;x
-b_kolhapur;戈尔哈布尔;;;;;;;;;;x
+c_kolhapur;憍罗诃补罗;;;;;;;;;;x
+c_kolhapur_adj;憍罗诃补罗;;;;;;;;;;x
+b_kolhapur;憍罗诃补罗;;;;;;;;;;x
 b_kurundaka;库伦塔克;;;;;;;;;;x
 b_karahataka;卡拉荷塔克;;;;;;;;;;x
 b_pranala;普罗纳拉;;;;;;;;;;x
@@ -1309,9 +1309,9 @@ b_racakonda;罗遮憍陀;;;;;;;;;;x
 b_bhuvanagiri;布瓦纳吉里;;;;;;;;;;x
 b_manchal;马查尔;;;;;;;;;;x
 b_yadagirigutta;耶达吉里古特塔;;;;;;;;;;x
-c_nilagiri;黑丘;;;;;;;;;;x
-c_nilagiri_adj;黑丘;;;;;;;;;;x
-b_nilagiri;黑丘;;;;;;;;;;x
+c_nilagiri;尼拉吉里;;;;;;;;;;x
+c_nilagiri_adj;尼拉吉里;;;;;;;;;;x
+b_nilagiri;尼拉吉里;;;;;;;;;;x
 b_avulagadda;阿努拉贾达;;;;;;;;;;x
 b_panagallu;潘加洛;;;;;;;;;;x
 b_maheshwaram;马赫什瓦兰;;;;;;;;;;x
@@ -1492,7 +1492,7 @@ c_bikrampur_adj;威德城;;;;;;;;;;x
 b_bikrampur;威德城;;;;;;;;;;x
 b_sutrapur;须陀罗城;;;;;;;;;;x
 b_dhakeshwari_jatiya_mandir;达卡女神庙;;;;;;;;;;x
-b_loricol;洛利孔;;;;;;;;;;x
+b_loricol;若利孔;;;;;;;;;;x
 b_shakhari_bazar;释诃利市集;;;;;;;;;;x
 b_hajiganj;诃耆犍阇;;;;;;;;;;x
 c_kumara_mandala;鸠摩罗曼陀罗;;;;;;;;;;x
@@ -1676,9 +1676,9 @@ b_sugauna;须乔那;;;;;;;;;;x
 b_darbhanga;陀罗般迦;;;;;;;;;;x
 b_hajipur;诃耆城;;;;;;;;;;x
 b_siwan;锡万;;;;;;;;;;x
-c_kusinagara;拘尸城;;;;;;;;;;x
-c_kusinagara_adj;拘尸城;;;;;;;;;;x
-b_kusinagara;拘尸城;;;;;;;;;;x
+c_kusinagara;拘尸那迦;;;;;;;;;;x
+c_kusinagara_adj;拘尸那迦;;;;;;;;;;x
+b_kusinagara;拘尸那迦;;;;;;;;;;x
 b_lumbini;蓝毗尼;;;;;;;;;;x
 b_padrauna;跋罗郁那;;;;;;;;;;x
 b_ramagrama;罗摩村;;;;;;;;;;x
@@ -1884,7 +1884,7 @@ b_lalkot;拉尔科特;;;;;;;;;;x
 b_narela;那梨罗;;;;;;;;;;x
 b_siri;斯利;;;;;;;;;;x
 b_jahanpanah;贾汉帕那赫;;;;;;;;;;x
-b_lori_berd;洛利堡;;;;;;;;;;x
+b_lori_berd;若利堡;;;;;;;;;;x
 b_dzegh;迪撒格;;;;;;;;;;x
 b_dmanis;迪曼尼斯;;;;;;;;;;x
 b_agarak;阿加拉克;;;;;;;;;;x
