--- a/localisation/CombatUpdate.csv
+++ b/localisation/CombatUpdate.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 MOVEMENT_SPEED;行军速度;;;;;;;;;;x
 EXPERIMENTALITY;战术几率;;;;;;;;;;x
 CU_LIGHT_INFANTRY;轻步兵;;;;;;;;;;x
@@ -14,6 +14,6 @@ CENTER;中军领袖;;;;;;;;;;x
 DEFENCE;防御;;;;;;;;;;x
 CANNOT_PLAY_MUSLIM_WITHOUT_DLC;没有伊斯兰之剑DLC，你不能扮演穆斯林领主。;;;;;;;;;;x
 NOT_ALLOWED_MUSLIM;没有伊斯兰之剑的DLC，你不能扮演§Y穆斯林§!;;;;;;;;;;x
-NOT_ALLOWED_MUSLIM_MP;§Y$PLAYER$§!没有伊斯兰之剑的DLC，你不能扮演§Y穆斯林§!;;;;;;;;;;x
+NOT_ALLOWED_MUSLIM_MP;§Y$PLAYER$§!没有伊斯兰之剑DLC，不能扮演§Y穆斯林§!;;;;;;;;;;x
 RD_NOT_PLAYABLE_WITHOUT_MUSLIM_DLC;没有伊斯兰之剑DLC，你不能扮演穆斯林领主。;;;;;;;;;;x
-MUST_SELECT_PLAYER;必须选择一个人物！;;;;;;;;;;x
+MUST_SELECT_PLAYER;必须选择一名角色！;;;;;;;;;;x
