--- a/localisation/text5.csv
+++ b/localisation/text5.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 EVTDESC60010;伟大的[Root.GetTitledName]和[Root.GetHerHis]的封臣们皈依了天主教！;;;;;;;;;;x
 EVTDESC60011;伟大的[Root.GetTitledName]和[Root.GetHerHis]的封臣们皈依了东正教！;;;;;;;;;;x
 EVTDESC60012;伟大的[Root.GetTitledName]和[Root.GetHerHis]的封臣们皈依了逊尼派！;;;;;;;;;;x
@@ -38,7 +38,7 @@ LOADING_TIP_0;「直辖领地」是指个人拥有的城堡，城市和修道院
 LOADING_TIP_49;仔细检查你配偶的特质;;;;;;;;;;x
 EVTDESC3340;当一位友善的廷臣向我表示敬意时我差点咬到了自己的舌头。他认为我感到不悦，然后困惑的离开了。;;;;;;;;;;x
 EVTOPTA3340;我猜我可能失去了他的尊敬……;;;;;;;;;;x
-alert_dejure_claim_instant;§Y你可以公开法理公爵的宣称§!;;;;;;;;;;x
+alert_dejure_claim_instant;§Y你可以索取法理公爵的宣称§!;;;;;;;;;;x
 alert_dejure_claim_delayed;你可以公开以下的法理公爵的宣称：$LIST$;;;;;;;;;;x
 PRESSABLE_CLAIM;$CLAIMANT$对$COUNTY$的合理宣称;;;;;;;;;;x
 OPT_draw_trees;渲染树木;;;;;;;;;;x
