--- a/localisation/text7.csv
+++ b/localisation/text7.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 WIKIPEDIA_LINK;§Y维基百科链接（英文）§!;;;;;;;;;;x
 WIKIPEDIA_LINK_DESC;浏览维基百科上的角色介绍;;;;;;;;;;x
 WIKIPEDIA_LINK_MISSING;§Y这个角色没有维基百科介绍§!;;;;;;;;;;x
@@ -32,7 +32,7 @@ alert_available_plot_name;可以策划新阴谋;;;;;;;;;;x
 alert_vassal_levies_raised_long_name;封臣部队征召时间过长;;;;;;;;;;x
 alert_owns_wrong_settlement_type_name;错误的直辖领地类型;;;;;;;;;;x
 alert_no_ambition_name;选择一项野心;;;;;;;;;;x
-alert_dejure_claim_name;可以公开法理宣称;;;;;;;;;;x
+alert_dejure_claim_name;可以索取法理宣称;;;;;;;;;;x
 alert_truce_expiring_name;和约将到期;;;;;;;;;;x
 OPINION_OF_ME;对我的好感;;;;;;;;;;x
 MY_OPINION_OF_CHAR;我对$CHAR$的好感;;;;;;;;;;x
