--- a/localisation/text9.csv
+++ b/localisation/text9.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 d_connacht_adj;康诺特;;;;;;;;;;x
 d_leinster_adj;伦斯特;;;;;;;;;;x
 d_munster_adj;芒斯特;;;;;;;;;;x
@@ -56,9 +56,9 @@ EVTOPTA7505;我没什么选择。;;;;;;;;;;x
 EVTOPTB7505;想也别想！;;;;;;;;;;x
 EVTOPTC7505;由于没有合适的封臣，你自己将得到这个头衔。;;;;;;;;;;x
 EVTTOOLTIP7505;[Root.PlotTarget.GetTitledName]收到一封信。;;;;;;;;;;x
-EVTDESC7506;即便我敢肯定我将一直咒骂汝名、至死方休，可为了和平，我还是不得不接受你的要求。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC7506;即便我敢肯定我将一直咒骂汝名，至死方休，可为了和平，我还是不得不接受你的要求。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA7506;妙极了。;;;;;;;;;;x
-EVTDESC7507;比起向[Root.PlotTargetTitle.GetFullName]投降，我更愿意拿起武器。如果你和你的小伙伴们能鼓起勇气来面对我，我会很高兴吧你们杀到一个都不剩！放马过来吧！\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC7507;比起向[Root.PlotTargetTitle.GetFullName]投降，我更愿意拿起武器。如果你和你的小伙伴们能鼓起勇气来面对我，我会很乐意把你们杀到一个都不剩！放马过来吧！\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA7507;你会为你这番话后悔的，我亲爱的[From.GetTitle]。;;;;;;;;;;x
 EVTOPTB7507;也许我不应该冒险一战……;;;;;;;;;;x
 EVTTOOLTIP7507;拒绝接受最后通牒。;;;;;;;;;;x
@@ -67,16 +67,16 @@ EVTOPTA7508;很好。;;;;;;;;;;x
 EVTOPTA7509;这傲慢的家伙！;;;;;;;;;;x
 EVTDESC7510;[Root.Liege.GetTitle]成功让原来的领主让位。现在，由[Root.PlotTarget.GetTitledFirstName]统治[Root.PlotTargetTitle.GetFullName]。;;;;;;;;;;x
 EVTOPTA7510;很好。;;;;;;;;;;x
-EVTDESC7511;[Root.PlotTarget.GetTitledFirstName]拒绝了[Root.Liege.GetTitle]让出[Root.PlotTargetTitle.GetFullName]头衔的合理要求，但这至少让你的领主有了在未来褫夺这个头衔的动机。显然，现在你将只能接受这个安排。;;;;;;;;;;x
+EVTDESC7511;[Root.PlotTarget.GetTitledFirstName]拒绝了[Root.Liege.GetTitle]让出[Root.PlotTargetTitle.GetFullName]头衔的合理要求，但这至少让你的领主有了在未来剥夺这个头衔的动机。显然，现在你将只能接受这个安排。;;;;;;;;;;x
 EVTOPTA7511;就这样吧。;;;;;;;;;;x
 EVTDESC7515;通过贵族们秘密的阴谋，[From.GetTitledName]被迫出让[From.GetHerHis]其中一个公国。经过认真考虑，国内的领主们最终设法达成一致，认为你是这个头衔最无侵略性的候选人。恭喜你，[From.GetTitle]。;;;;;;;;;;x
 EVTOPTA7515;好事情总是发生在愿意等待的人身上。;;;;;;;;;;x
-EVTDESC7517;[From.GetTitledName]没有合适的封臣接受这个头衔，所以它将被授予给你，由你决定如何处置。;;;;;;;;;;x
+EVTDESC7517;[From.GetTitledName]没有合适的封臣能接受这个头衔，所以它将被授予给你，由你决定如何处置。;;;;;;;;;;x
 PLOT_TOOLTIP_WEAKEN_VASSAL;[This.Holder.GetTitledName]不再是[This.GetFullName]头衔的持有者。;;;;;;;;;;x
 CB_NAME_WEAKEN_VASSAL;宣称[Title.GetName];;;;;;;;;;x
 VASSAL_TRANSFER_SETUP;一个封臣被转封;;;;;;;;;;x
 VASSAL_TRANSFER_LOG;$OLD_LIEGE$转封$VASSAL$给$NEW_LIEGE$;;;;;;;;;;x
-WAR_NAME_WEAKEN_VASSAL;扶持$OTHER_TITLE$新统治者战争;;;;;;;;;;x
+WAR_NAME_WEAKEN_VASSAL;扶持$OTHER_TITLE$成为新统治者战争;;;;;;;;;;x
 TRIGGER_ATTACKER;主要进攻方;;;;;;;;;;x
 TRIGGER_MOST_PART_ATTACKER;贡献最大的进攻者;;;;;;;;;;x
 TRIGGER_DEFENDER;主要防御方;;;;;;;;;;x
