--- a/localisation/v1_06b.csv
+++ b/localisation/v1_06b.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 TITLE_EMPIRE_CREATION_PIETY_COST;你需要 §R$COST$§! $PIETYNAME$ 来创建一个帝国.;;;;;;;;;;x
 muslim_invasion_desc;§Y$TARGET$§! 不是真正的信徒——这是§Y$CLAIMANT$§!向§Y$TITLE$§!开战的理由！如果成功，§Y$TARGET$§! 在 §Y$TITLE$§! 的所有领地将会被占领或者附庸。;;;;;;;;;;x
 duke_female_iranian;佳丽;;;;;;;;;;x
@@ -26,7 +26,7 @@ iqta_contract_1_option;低;;;;;;;;;;x
 iqta_contract_1_desc;封臣可以为自己保留关键的兵员。;;;;;;;;;;x
 iqta_contract_2;中等兵役;;;;;;;;;;x
 iqta_contract_2_option;中等;;;;;;;;;;x
-iqta_contract_2_desc;领主可以在驻军外保留一份机动兵力。;;;;;;;;;;x
+iqta_contract_2_desc;封臣可以在驻军外保留一份机动兵力。;;;;;;;;;;x
 iqta_contract_3;最高兵役;;;;;;;;;;x
 iqta_contract_3_option;最高;;;;;;;;;;x
 iqta_contract_3_desc;封臣有义务提供全部兵员。;;;;;;;;;;x
