--- a/localisation/v1_07b.csv
+++ b/localisation/v1_07b.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 FACTION_LEADER;派系领导人;;;;;;;;;;x
 FACTION_MEMBER;派系成员;;;;;;;;;;x
 opinion_defeated_major_revolt;粉碎重要反叛;;;;;;;;;;x
@@ -24,12 +24,12 @@ MONOTHELITE_PATRIARCH;基督一志派牧首;;;;;;;;;;x
 INTERACTION_TITLE_NOT_CONTESTED;没有任何的战争借口;;;;;;;;;;x
 AND_TRIGGER_STARTS;以下必须是切实可行的;;;;;;;;;;x
 WAR_INVALID_LOG;$WAR$有决定性的$REASON$;;;;;;;;;;x
-WAR_INVALID_CHARACTER_UNLANDED;\n（$CHARACTER$ 成为庶人）;;;;;;;;;;x
-WAR_INVALID_LIEGE_HIERARCHY;\n（$CHARACTER$ 的君臣关系变化 ）;;;;;;;;;;x
+WAR_INVALID_CHARACTER_UNLANDED;\n（$CHARACTER$成为庶人）;;;;;;;;;;x
+WAR_INVALID_LIEGE_HIERARCHY;\n（$CHARACTER$的君臣关系变化 ）;;;;;;;;;;x
 REL_PENTARCHS_NON_ORTHODOX_DESC;这些领袖是最初的基督教五大宗主教。他们自古以来公认的自行任命主教的权利仍被$RELIGION$承认。;;;;;;;;;;x
 PENTARCH_DESC;目前没有$RELIGION$的§Y$TITLE$§!主教;;;;;;;;;;x
 HEAD_NOT_PENTARCH_DESC;$REL_HEAD$目前没有§Y$TITLE$§!头衔;;;;;;;;;;x
-AUTOCEPHALY_DRO;除了最初五大牧首区的五大宗主教，其他$RELIGION$王国或帝国也有各自的宗主教。这样的王国或帝国的宫廷牧师也被认为等同于宗主教。他们总是听从领主的吩咐，但只有$REL_HEAD_TITLE$可以授予入侵理由。每个独立的宗主教在其控制领域内都有开除教籍的权力……;;;;;;;;;;x
+AUTOCEPHALY_DRO;除了最初五大牧首区的五大宗主教，其他$RELIGION$王国或帝国也有各自的宗主教。这样的王国或帝国的宫廷牧师也被认为等同于宗主教。他们总是听从领主的吩咐，但只有$REL_HEAD_TITLE$可以授予入侵理由。每个独立的宗主教在其控制领域内都有绝罚的权力。;;;;;;;;;;x
 LEAVE_FACTION_DIPLO_IMMUNE;只要最后通牒已经发出就不能离开！;;;;;;;;;;x
 IS_DIPLO_IMMUNE;不受敌对领主的行动的影响;;;;;;;;;;x
 IS_NOT_DIPLO_IMMUNE;受到敌对领主的行动的影响;;;;;;;;;;x
@@ -45,53 +45,53 @@ EVTDESC45003;大量的老兵和各种机会主义者不断聚集到[From.Capital
 EVTOPTA45003;接下来呢？女人和孩子？;;;;;;;;;;x
 EVTDESC8037;伟大的[Root.GetTitledFirstName]！我和一群忠诚的士兵已经向篡位者发出了最后通牒，[From.Liege.GetTitledName]，请求你统治[From.SupportedClaimantTitle.GetName]。祝我们好运!\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA8037;这可能会很难看……;;;;;;;;;;x
-EVTDESC20369;我的领主，[FromFrom.GetTitledName] 决定不冒险刺激他的封臣并且承认腐败的指控。这可能需要花费一点时间来让 [FromFrom.GetHerHis] 恢复声望 ，并且我带回了我收来的罚款。\n\n你谦卑的间谍总管，\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC20369;我的领主，[FromFrom.GetTitledName]决定不冒险刺激他的封臣并且承认腐败的指控。这可能需要花费一点时间来让[FromFrom.GetHerHis]声望得以恢复，并且我带回了我收来的罚款。\n\n你谦卑的间谍总管，\n[From.GetTitledName];;;;;;;;;;x
 EVTTOOLTIP2484;这个孩子需要一个监护者。;;;;;;;;;;x
 EVTOPTD4140;我们确是安拉所掌握的，我们将必归于他;;;;;;;;;;x
 blinded_death;失明引起的并发症;;;;;;;;;;x
-successful_sally;防御部队得到§G10.0%§!士气.\n 防御部队受到§R2.5%§!损失.\n§G敌人:§! 进攻部队受到§R5.0%§!损失.;;;;;;;;;;x
-successful_sally_attacker;进攻部队受到§R5.0%§!损失.\n§G敌人:§! 防御部队得到 §G10.0%§!士气.\n防御部队受到§R2.5%§!损失.;;;;;;;;;;x
-failed_sally;防御部队得到§R-10.0%§!士气.\n防御部队受到§R5.0%§!损失.\n§G敌人:§! 进攻部队受到§R2.5%§!损失.;;;;;;;;;;x
-siege_treachery;防御部队得到§R-10.0%§!士气.;;;;;;;;;;x
-siege_disease;§G敌人:§! 进攻部队受到 §R5.0%§! 损失.;;;;;;;;;;x
-siege_raiders;§G敌人:§! 进攻部队受到 §R1.0%§! 损失.;;;;;;;;;;x
-siege_execute;§G敌人:§! 防御部队得到 §G10.0%§! 士气.;;;;;;;;;;x
-siege_hunger;§G敌人:§! 防御部队受到 §R5.0%§! 损失.;;;;;;;;;;x
-siege_trader;§G敌人:§! 防御部队得到 §G10.0%§! 士气.;;;;;;;;;;x
-siege_miracle;进攻部队受到 §R90.0%§! 损失.\n进攻部队得到 §R-90.0%§! 士气.\n§G敌人:§! 防御部队得到§G100.0%§! 士气.;;;;;;;;;;x
-siege_personal_charge;防御部队得到§R-10.0%§! 士气.;;;;;;;;;;x
-siege_assault;防御部队得到 §R-20.0%§! 士气.\n防御部队收到 §R20.0%§! 损失.\n§G敌人:§! 进攻部队受到 §R10.0%§! 损失.;;;;;;;;;;x
-siege_hide;防御部队得到 §R-5.0%§! 士气.\n防御部队受到 §R5.0%§! 损失.\n§G敌人:§! 进攻部队受到§R15.0%§! 损失.;;;;;;;;;;x
-INTERACTION_REQUIRES_BOTH_OF_AGE;§Y$ACTOR_PERSON$§!和§Y$RECIPIENT_PERSON$§! 都有至少 §Y$YEARS$§! 岁;;;;;;;;;;x
+successful_sally;防御部队得到§G10.0%§!士气。\n防御部队受到§R2.5%§!损失。\n§G敌人：§!进攻部队受到§R5.0%§!损失。;;;;;;;;;;x
+successful_sally_attacker;进攻部队受到§R5.0%§!损失。\n§G敌人：§!防御部队得到§G10.0%§!士气。\n防御部队受到§R2.5%§!损失。;;;;;;;;;;x
+failed_sally;防御部队得到§R-10.0%§!士气。\n防御部队受到§R5.0%§!损失。\n§G敌人：§!进攻部队受到§R2.5%§!损失。;;;;;;;;;;x
+siege_treachery;防御部队得到§R-10.0%§!士气。;;;;;;;;;;x
+siege_disease;§G敌人：§!进攻部队受到§R5.0%§!损失。;;;;;;;;;;x
+siege_raiders;§G敌人：§!进攻部队受到§R1.0%§!损失。;;;;;;;;;;x
+siege_execute;§G敌人：§!防御部队得到§G10.0%§!士气。;;;;;;;;;;x
+siege_hunger;§G敌人：§!进攻部队受到§R5.0%§!损失。;;;;;;;;;;x
+siege_trader;§G敌人：§!防御部队得到§G10.0%§!士气。;;;;;;;;;;x
+siege_miracle;进攻部队受到§R90.0%§!损失。\n进攻部队得到§R-90.0%§!士气。\n§G敌人：§!防御部队得到§G100.0%§!士气。;;;;;;;;;;x
+siege_personal_charge;防御部队得到§R-10.0%§!士气。;;;;;;;;;;x
+siege_assault;防御部队得到§R-20.0%§!士气。\n防御部队收到§R20.0%§!损失。\n§G敌人：§!进攻部队受到§R10.0%§!损失。;;;;;;;;;;x
+siege_hide;防御部队得到§R-5.0%§!士气。\n防御部队受到§R5.0%§!损失。\n§G敌人：§!进攻部队受到§R15.0%§!损失。;;;;;;;;;;x
+INTERACTION_REQUIRES_BOTH_OF_AGE;§Y$ACTOR_PERSON$§!和§Y$RECIPIENT_PERSON$§!都有至少§Y$YEARS$§!岁;;;;;;;;;;x
 EVTOPTA62039;做得好，山贼！;;;;;;;;;;x
-EVTNAME62011;奇迹!;;;;;;;;;;x
+EVTNAME62011;奇迹！;;;;;;;;;;x
 EVTNAME62041;灾难!;;;;;;;;;;x
 EVTOPTA62034;他们会为此付出代价的!;;;;;;;;;;x
-EVTOPTA62041;这是怎么发生的;;;;;;;;;;x
+EVTOPTA62041;这是怎么发生的？;;;;;;;;;;x
 EVTNAME62044;敌人攻击;;;;;;;;;;x
-EVTDESC62044;围攻我们要塞的基督教指挥官亲自带队冲向了我们的城墙! 他疯狂地冲锋让我们勇敢的卫士吃了一大惊!;;;;;;;;;;x
+EVTDESC62044;围攻我们要塞的基督教指挥官亲自带队冲向了我们的城墙！他疯狂地冲锋让我们勇敢的卫士吃了一大惊！;;;;;;;;;;x
 EVTOPTA62044;疯子!;;;;;;;;;;x
-EVTDESC62045;敌人对我们的要塞发动了大规模冲锋!我们的对此毫无准备!;;;;;;;;;;x
+EVTDESC62045;敌人对我们的要塞发动了大规模冲锋！我们的军队对此毫无准备！;;;;;;;;;;x
 EVTOPTA62045;准备防御!;;;;;;;;;;x
 CB_NAME_IMPERIAL;[Title.GetBaseName]的帝国再征服;;;;;;;;;;x
 WAR_NAME_IMPERIAL;$ORDER$$FIRST_ADJ$ $OTHER_TITLE$帝国再征服;;;;;;;;;;x
-imperial_reconquest_desc;必须夺回罗马帝国丢失的领土! §Y$CLAIMANT$§!可以用这个宣战理由夺回所有§Y$TITLE$§!法理范围内的被§Y$TARGET$§!持有的头衔 .;;;;;;;;;;x
-COUNTS_AS_PURPLE_BORN;出身显贵;;;;;;;;;;x
+imperial_reconquest_desc;必须夺回罗马帝国丢失的领土！§Y$CLAIMANT$§!可以用这个宣战理由夺回所有§Y$TITLE$§!法理范围内的被§Y$TARGET$§!持有的头衔。;;;;;;;;;;x
+COUNTS_AS_PURPLE_BORN;生于紫室;;;;;;;;;;x
 AIREASON_IS_MY_PARENT;是我的父母;;;;;;;;;;x
 FLANK_DOES_NOT_HAVE_LEADER;侧翼没有指挥者;;;;;;;;;;x
 FLANK_HAS_LEADER;侧翼有指挥者;;;;;;;;;;x
-CANNOT_BUY_RET_OCCUPIED;\n你无法册封这个常备军，你没有控制你的任何一个私有头衔.;;;;;;;;;;x
+CANNOT_BUY_RET_OCCUPIED;\n你无法册封这个常备军，你没有控制你的任何一个私有头衔。;;;;;;;;;;x
 duke_russian;大公;;;;;;;;;;x
 duke_female_russian;女大公;;;;;;;;;;x
 duchy_of_russian;大公国;;;;;;;;;;x
-king_iranian;沙王;;;;;;;;;;x
-kingdom_of_iranian;沙王国;;;;;;;;;;x
+king_iranian;沙阿;;;;;;;;;;x
+kingdom_of_iranian;沙阿国;;;;;;;;;;x
 emperor_female_greek;巴赛丽莎;;;;;;;;;;x
-EVTTOOLTIP94066;你努力修缮你的花园.;;;;;;;;;;x
+EVTTOOLTIP94066;你努力修缮你的花园。;;;;;;;;;;x
 MediterraneanPortraitsDLC;地中海人物肖像;;;;;;;;;;x
 SongsOfByzantiumDLC;拜占庭之颂;;;;;;;;;;x
 ByzantineUnitsDLC;拜占庭单位补丁包;;;;;;;;;;x
 CK2CoA2DLC;家族旗帜补丁2;;;;;;;;;;x
 ALL_DIRECT_DE_JURE_VASSAL_TITLES;所有直属法理封臣头衔;;;;;;;;;;x
-WAR_INVALID_CB_TRIGGER;\n(宣战理由不再有效);;;;;;;;;;x
+WAR_INVALID_CB_TRIGGER;\n（宣战理由不再有效）;;;;;;;;;;x
 AfricanPortraitsDLC;非洲人头像;;;;;;;;;;x
