--- a/localisation/v1_08.csv
+++ b/localisation/v1_08.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 IS_NOT_ADULT;不是成年人;;;;;;;;;;x
 IS_ADULT;是成年人;;;;;;;;;;x
 IS_NOT_MARRIAGE_ADULT;未到婚龄;;;;;;;;;;x
@@ -12,7 +12,7 @@ FORBIDDEN_LEAD;这位廷臣现在被禁止带领军队。\n§G点击此处允许
 DEMAND_RELIGIOUS_CONVERSION_INTERACTION_0;§Y[Recipient.GetFirstName] 将从监狱被释放，如果[Recipient.GetSubjectPronoun] 同意§!;;;;;;;;;;x
 opinion_fought_for_claimant;为宣称权而战;;;;;;;;;;x
 EVTOPTD9001;礼貌地询问。;;;;;;;;;;x
-EVTDESC9003;亲爱的 [Root.GetTitle]，\n\n我已经知道在我的领地内有某些派系正在破坏我的统治。如果你参与了或者打算这么做，我相信你现在会打消这个念头。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
+EVTDESC9003;我亲爱的[Root.GetTitle]，\n\n我已经知道在我的领地内有某些派系正在破坏我的统治。如果你参与了或者打算这么做，我相信你现在会打消这个念头。\n\n此致，\n[From.GetTitledName];;;;;;;;;;x
 EVTOPTA9003;最好不要冒这个险...;;;;;;;;;;x
 EVTOPTB9003;哈！这封信表现了绝望。;;;;;;;;;;x
 EVTTOOLTIP9023;你送出了一封礼貌的请求书。;;;;;;;;;;x
