--- a/localisation/v1_081.csv
+++ b/localisation/v1_081.csv
@@ -1,6 +1,6 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 FACTION_LEADERSHIP_CHANGE_SETUP;派系推举了一位新领袖;;;;;;;;;;x
-FACTION_LEADERSHIP_CHANGE_LOG;§Y$CHARNAME$§!已经成为『$OBJECTIVE$』的领袖。;;;;;;;;;;x
+FACTION_LEADERSHIP_CHANGE_LOG;§Y$CHARNAME$§!已经成为「$OBJECTIVE$」的领袖。;;;;;;;;;;x
 BUILDING_PREREQ_FAIL;(§RX§!)拥有§G$BUILDING$§!;;;;;;;;;;x
 IS_NOT_AT_SEA;不在海上;;;;;;;;;;x
 IS_AT_SEA;在海上;;;;;;;;;;x
