--- a/localisation/v1_09c.csv
+++ b/localisation/v1_09c.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 seize_trade_post_desc;作为一名贵人，§Y$CLAIMANT$§!可以不向§Y$TITLE$§!请示而直接对§Y$TARGET$§!宣战。这一宣战理由对于同一共和国内弱得多的贵族是不正当的。;;;;;;;;;;x
 opinion_rival_republic;敌对共和国;;;;;;;;;;x
 EVTDESC_REP_070;经营你其中一个贸易节点的商人们宣布放弃对你的朝廷效忠！现在他们效力于一个贵人家族，该家族是新生的汉萨同盟的成员。汉萨同盟宣布他们这个异军突起的同盟会为商人们获利提供更好的机会。;;;;;;;;;;x
@@ -14,17 +14,17 @@ INTERACTION_ACTOR_NOT_TRUCE;§Y[Actor.GetTitledFirstName]§!与§Y[ThirdPartyCha
 AIREASON_PRIMARY_IN_WARS;主要参战方;;;;;;;;;;x
 AIREASON_MINOR_IN_WARS;次要参战方;;;;;;;;;;x
 ASK_TO_EMBARGO_INTERACTION_TITLE;要求下达封港令;;;;;;;;;;x
-ASK_TO_EMBARGO_INTERACTION_DESC;要求§Y[Recipient.GetBestName]§!宣布对敌对商业共和国发动封港战争。;;;;;;;;;;x
+ASK_TO_EMBARGO_INTERACTION_DESC;要求§Y[Recipient.GetBestName]§!宣布对敌对商业共和国发动禁运战争。;;;;;;;;;;x
 ASK_TO_EMBARGO_INTERACTION_LONG_DESC;你可以通过说服一个领主对其下达贸易禁运以达到削弱敌对共和国和为你的贸易节点开放沿海省份的目的。通常来说用金钱可以帮你办到这件事。然而，如果你在战争中铩羽而归， §Y你§!就要赔付战争赔款。;;;;;;;;;;x
 ASK_TO_EMBARGO_INTERACTION_0;选择一个敌对的商业共和国以对其下达封港令。;;;;;;;;;;x
-ASK_TO_EMBARGO_INTERACTION_1;让 §Y[Recipient.GetTitledFirstName]§! 一起和你宣布禁运战争, 目标: §Y[ThirdPartyCharacter.GetTitledFirstName]§! 和 §Y[ThirdPartyCharacter.TopLiege.PrimaryTitle.GetName]§!。给他们 §Y$GOLD$§!¤ 来促进达成交易。 §R输掉战争将要支付战败赔款§!;;;;;;;;;;x
+ASK_TO_EMBARGO_INTERACTION_1;让§Y[Recipient.GetTitledFirstName]§!一起和你宣布禁运战争, 目标：§Y[ThirdPartyCharacter.GetTitledFirstName]§!和§Y[ThirdPartyCharacter.TopLiege.PrimaryTitle.GetName]§!。给他们 §Y$GOLD$§!¤来促进达成交易。§R输掉战争将要支付战败赔款§!;;;;;;;;;;x
 ASK_TO_EMBARGO_INTERACTION_ACCEPT_SETUP;封港令请求已获通过;;;;;;;;;;x
-ASK_TO_EMBARGO_INTERACTION_ACCEPT_LOG;§Y[Recipient.GetTitledName]§!和§Y[Actor.GetTitledName]§!已宣布对§Y[ThirdPartyCharacter.GetDynName]§!联合发动禁运战争。;;;;;;;;;;x
-ASK_TO_EMBARGO_INTERACTION_OFFER;[Actor.GetTitledName] 给我们 $COST$¤，希望能够对 [ThirdPartyCharacter.GetTitledFirstName] 和 [ThirdPartyCharacter.TopLiege.PrimaryTitle.GetName] 下达贸易禁运。;;;;;;;;;;x
-ASK_TO_EMBARGO_INTERACTION_LETTER;狡猾的 [ThirdPartyCharacter.PrimaryTitle.GetAdjective] 商贩必须从你的土地驱逐出去。如果你同意对 [ThirdPartyCharacter.GetTitledName] 发动贸易禁运，我们不仅会在战争中加入你方，你也会获得 $COST$¤。如果我们的战争失败了, [Actor.PrimaryTitle.GetName] 将会承担全部战争赔款。;;;;;;;;;;x
+ASK_TO_EMBARGO_INTERACTION_ACCEPT_LOG;§Y[Recipient.GetTitledName]§!和§Y[Actor.GetTitledName]§!已宣布对§Y[ThirdPartyCharacter.GetDynName]§!联合发动禁运战争;;;;;;;;;;x
+ASK_TO_EMBARGO_INTERACTION_OFFER;[Actor.GetTitledName]给我们$COST$¤，希望能够对[ThirdPartyCharacter.GetTitledFirstName]和[ThirdPartyCharacter.TopLiege.PrimaryTitle.GetName]下达贸易禁运。;;;;;;;;;;x
+ASK_TO_EMBARGO_INTERACTION_LETTER;狡猾的[ThirdPartyCharacter.PrimaryTitle.GetAdjective]商贩必须从你的土地驱逐出去。如果你同意对[ThirdPartyCharacter.GetTitledName]发动贸易禁运，我们不仅会在战争中加入你方，你也会获得$COST$¤。如果我们的战争失败了, [Actor.PrimaryTitle.GetName]将会承担全部战争赔款。;;;;;;;;;;x
 INTERACTION_REQUIRES_TARGET_IS_MERCHANT_REPUBLIC;§Y[ThirdPartyCharacter.PrimaryTitle.GetName]§!是一个商业共和国。;;;;;;;;;;x
 ANY_ATTACKER_STARTS;任何进攻方;;;;;;;;;;x
-ANY_DEFENDER_STARTS;任何防守方。;;;;;;;;;;x
+ANY_DEFENDER_STARTS;任何防守方;;;;;;;;;;x
 EVTDESC295;经过深思熟虑，我决定采纳你的建议。我们会共同将[Root.PrimaryTitle.GetAdjective]商人驱赶出[From.PrimaryTitle.GetName]！\n\n[From.GetTitledFirstName];;;;;;;;;;x
 EVTDESC296;说实话，我发现你针对[Root.PrimaryTitle.GetName]的封港令颇为可笑。两个国家都是铁公鸡，我怎么会偏爱其中一方呢？\n\n[From.GetTitledFirstName];;;;;;;;;;x
 CONQUEROR_HOME_CULTURE;文化纽带;;;;;;;;;;x
@@ -43,7 +43,7 @@ EVTOPTB_REP_601;不！局面会演变到难以控制……;;;;;;;;;;x
 tp_spare;你不打算对该贸易节点采取行动。;;;;;;;;;;x
 EVTTOOLTIP_REP_602;激愤的民众向贸易节点行进。;;;;;;;;;;x
 EVTDESC_REP_602;确切地说，你和[From.GetTitledName]现在关系还不是很要好。而且，现在[From.GetSheHe]似乎已鼓动一伙暴民将你在[FromFrom.GetName]的贸易节点夷为平地!你人数极少的卫戍部队已被他们包围。他们还威胁到，除非你撤出[FromFrom.GetName]，否则他们将会把你的部队屠杀殆尽。;;;;;;;;;;x
-EVTOPTA_REP_602;我们已山穷水尽。拆除贸易节点吧!;;;;;;;;;;x
+EVTOPTA_REP_602;我们已山穷水尽。拆除贸易节点吧！;;;;;;;;;;x
 EVTOPTB_REP_602;向[From.GetFirstName]行贿。;;;;;;;;;;x
 EVTOPTC_REP_602;指出贸易节点带给[FromFrom.GetName]的财富。;;;;;;;;;;x
 EVTOPTD_REP_602;运用高超的外交技巧以驱散暴民。;;;;;;;;;;x
