--- a/localisation/v1_102.csv
+++ b/localisation/v1_102.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 enatic;女性;;;;;;;;;;x
 enatic_desc;只有女性能继承头衔。;;;;;;;;;;x
 enatic_cognatic;女性优先;;;;;;;;;;x
@@ -31,8 +31,8 @@ odin_option_b;你继续狩猎。;;;;;;;;;;x
 EVTOPTC_TOG_3402;你斥责你的臣民们，因为他们竟然会相信诸神的传说。;;;;;;;;;;x
 odin_option_c;毕竟他们为你做过什么？;;;;;;;;;;x
 MONTHLY_PRESTIGE_TO_LIEGE;领主每月威望变化：§G+$VALUE$§!\n;;;;;;;;;;x
-MONTHLY_PIETY_TO_LIEGE;领主月度 $PIETYNAME$ 虔诚：§G+$VALUE$§!\n;;;;;;;;;;x
+MONTHLY_PIETY_TO_LIEGE;领主月度$PIETYNAME$虔诚：§G+$VALUE$§!\n;;;;;;;;;;x
 NO_LIEGEPRESTIGE;这个封臣不会给你带来任何威望。\n有些建筑能给建筑拥有者和拥有者的领主带来威望;;;;;;;;;;x
-NO_LIEGEPIETY;这个封臣不会给你带来任何$PIETYNAME$虔诚。\n有些建筑能给建筑拥有者和拥有者的领主带来 $PIETYNAME$虔诚。;;;;;;;;;;x
+NO_LIEGEPIETY;这个封臣不会给你带来任何$PIETYNAME$虔诚。\n有些建筑能给建筑拥有者和拥有者的领主带来$PIETYNAME$虔诚。;;;;;;;;;;x
 LIEGE_PRESTIGE_SELF;直属建筑带来的威望点：§G+$VALUE$§!;;;;;;;;;;x
 EVTOPTA62910_CUSTOM;§R所有喀尔巴阡山脉东部的伯爵都丢失了。§!\n所有在法理上属于匈牙利的伯爵都变成匈牙利文化了。\n;;;;;;;;;;x
