--- a/localisation/v2_30c.csv
+++ b/localisation/v2_30c.csv
@@ -1,4 +1,4 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 gamer;游戏大师;;;;;;;;;;x
 gamer_desc;这个角色是出了名的游戏大师,不论是象棋还是双陆棋,甚至是异国的十字戏都不在话下.;;;;;;;;;;x
 IS_NOT_MARRIED_TO;没有与 §Y$WHO$§! 结婚;;;;;;;;;;x
@@ -59,57 +59,57 @@ EVTOPTA_WOL_2230;看来我得找新线人了;;;;;;;;;;x
 EVTDESC_WOL_2231;亲爱的 [Root.GetTitledFirstNameNoRegnal], 恐怕我解放 [target_captive.GetBestName] 的计划需要花费更多金钱. 如果你希望 [target_captive.GetObjectPronoun] 取得自由,请送来更多的资金.\n\n你的朋友, [target_agent.GetBestName];;;;;;;;;;x
 EVTOPTA_WOL_2231;看来我别无选择;;;;;;;;;;x
 EVTOPTC_WOL_2231;是时候放弃了;;;;;;;;;;x
-EVTDESC_WOL_2232;我尽力了,但仍没有在 [target_captive.Host.GetTitledFirstName]的宫中找到愿意帮助[target_captive.GetBestName] 逃脱的人.;;;;;;;;;;x
+EVTDESC_WOL_2232;我尽力了，但仍没有在 [target_captive.Host.GetTitledFirstName]的宫中找到愿意帮助[target_captive.GetBestName] 逃脱的人。;;;;;;;;;;x
 EVTOPTA_WOL_2232;继续找;;;;;;;;;;x
-EVTOPTB_WOL_2232;我放弃!;;;;;;;;;;x
+EVTOPTB_WOL_2232;我放弃！;;;;;;;;;;x
 EVTOPTA_WOL_3003;我真诚又受欢迎;;;;;;;;;;x
 EVTOPTB_WOL_3003;我将成为人生路的大师;;;;;;;;;;x
 EVTDESC_WOL_10101;[From.GetTitledFirstName] 之前说他想让 [From.PrimaryTitle.GetName] [From.PrimaryTitle.GetTier] 发财。现在有个机会，没准能建立起一条能赚钱的新贸易路线。;;;;;;;;;;x
 EVTOPTA_WOL_10101;向 [From.GetTitledFirstName]说明.;;;;;;;;;;x
-EVTOPTB_WOL_10101;我有更重要的事情要做;;;;;;;;;;x
+EVTOPTB_WOL_10101;我有更重要的事情要做。;;;;;;;;;;x
 EVTDESC_WOL_10102;在一个 [From.GetJobTitle] 前来说明 [From.GetSheHeCap] 从异国取得物资的计划. [From.GetSheHe] 建议同外国建立商路,但需要进行一次昂贵的远行.潜在的利润丰富.;;;;;;;;;;x
 EVTOPTA_WOL_10102;启程远行;;;;;;;;;;x
-EVTOPTB_WOL_10102;钱还是得花在刀尖上;;;;;;;;;;x
-EVTDESC_WOL_10103;"是时候组织商队,带上驮畜启程了. 你前去寻找适合远行的强壮动物,但价格不菲.";;;;;;;;;;x
+EVTOPTB_WOL_10102;算了，钱还是得花在刀尖上。;;;;;;;;;;x
+EVTDESC_WOL_10103;是时候组织商队，带上驮畜启程了。 你前去寻找适合远行的强壮动物，但价格不菲。;;;;;;;;;;x
 EVTOPTA_WOL_10103;为旅途购买牲口.;;;;;;;;;;x
-EVTOPTB_WOL_10103;雇一伙强盗去偷驮畜.;;;;;;;;;;x
-EVTOPTC_WOL_10103;"想了想,我没钱.";;;;;;;;;;x
-EVTDESC_WOL_10104;"是时候准备远航的船只了. 港口管理员指了一条仓库够大适合这次远航的船,但价格不菲.";;;;;;;;;;x
-EVTOPTA_WOL_10104;从商人手里买下这条船.;;;;;;;;;;x
-EVTOPTB_WOL_10104;雇一伙强盗去偷这条船.;;;;;;;;;;x
-EVTOPTC_WOL_10104;"想了想,我没钱.";;;;;;;;;;x
+EVTOPTB_WOL_10103;雇一伙强盗去偷驮畜。;;;;;;;;;;x
+EVTOPTC_WOL_10103;想了想，我真的没钱。;;;;;;;;;;x
+EVTDESC_WOL_10104;是时候准备远航的船只了。港口管理员指了一条仓库够大适合这次远航的船，但价格不菲。;;;;;;;;;;x
+EVTOPTA_WOL_10104;从商人手里买下这条船。;;;;;;;;;;x
+EVTOPTB_WOL_10104;雇一伙强盗去偷这条船。;;;;;;;;;;x
+EVTOPTC_WOL_10104;想了想，我真的没钱。;;;;;;;;;;x
 EVTDESC_WOL_10105;"你远行的计划传开了, 一些[Root.Religion.GetPriestTitle]来到你面前, 提出教会能支付一部分开销,只要你能带上它们去异国.";;;;;;;;;;x
-EVTOPTA_WOL_10105;"当然,与你们同行是我的荣幸.";;;;;;;;;;x
-EVTOPTB_WOL_10105;要是你们碍事怎么办.;;;;;;;;;;x
+EVTOPTA_WOL_10105;当然，与你们同行是我的荣幸。;;;;;;;;;;x
+EVTOPTB_WOL_10105;不行，要是你们碍事怎么办。;;;;;;;;;;x
 EVTDESC_WOL_10106;[Root.Religion.GetPriestTitle]盯着船员让他们感到不快. 今天他们告知你,同贼匪旅行让他们感到担忧.他接着指出同这种人一同旅行不被 [Root.Religion.GetName]认可.;;;;;;;;;;x
-EVTOPTA_WOL_10106;好吧;;;;;;;;;;x
-EVTOPTB_WOL_10106;我们恰好是在提供他们不犯罪也能生存下去的途径.;;;;;;;;;;x
+EVTOPTA_WOL_10106;好吧。;;;;;;;;;;x
+EVTOPTB_WOL_10106;我们是在提供他们不犯罪也能生存下去的途径。;;;;;;;;;;x
 EVTDESC_WOL_10107;"消息传来说 [From.GetTitledFirstName]正计划去异国建立商路. 鉴于商路经过你利益所在的地区,自然你可以要求一笔钱补偿可能的贸易损失.";;;;;;;;;;x
-EVTOPTA_WOL_10107;要求金钱补偿.;;;;;;;;;;x
-EVTOPTB_WOL_10107;算了;;;;;;;;;;x
+EVTOPTA_WOL_10107;要求金钱补偿。;;;;;;;;;;x
+EVTOPTB_WOL_10107;算了。;;;;;;;;;;x
 EVTDESC_WOL_10108;尊敬的 [Root.GetTitledFirstName], 我听说你有意经过我国建立商路. 我希望商路造成 [From.PrimaryTitle.GetFullName]的贸易损失能够得到补偿\n\n此致, \n[From.GetTitledFirstName];;;;;;;;;;x
-EVTOPTA_WOL_10108;这些钱是给 [From.GetTitle] 的.;;;;;;;;;;x
-EVTOPTB_WOL_10108;这不是你的事情;;;;;;;;;;x
-EVTDESCA_WOL_10109;亲爱的 [Root.GetTitledFirstName].当然，你应当对我们的侵犯进行补偿。\n\nSigned, \n[From.GetTitledFirstName];;;;;;;;;;x
-EVTDESCB_WOL_10109;"亲爱的 [Root.GetTitledFirstName]. 我了解你目前关切的事项但是这是我的事物而并不是你的。\n\nSigned, \n[From.GetTitledFirstName]";;;;;;;;;;x
-EVTOPTA_WOL_10109;太棒了!;;;;;;;;;;x
+EVTOPTA_WOL_10108;这些钱是给 [From.GetTitle] 的。;;;;;;;;;;x
+EVTOPTB_WOL_10108;这与你无关。;;;;;;;;;;x
+EVTDESCA_WOL_10109;亲爱的[Root.GetTitledFirstName]，你应当对我们的侵犯进行补偿。\n\n此致，\n[From.GetTitledFirstName];;;;;;;;;;x
+EVTDESCB_WOL_10109;亲爱的[Root.GetTitledFirstName]，我了解你的关切，但这是我的事业，而不是你的。\n\n此致，\n[From.GetTitledFirstName];;;;;;;;;;x
+EVTOPTA_WOL_10109;太棒了！;;;;;;;;;;x
 EVTOPTB_WOL_10109;那个海盗!;;;;;;;;;;x
 EVTDESCA_WOL_10110;你雇佣去偷取牲畜的土匪已经失败，更糟糕的是，他们中的一些人被捕，并透露了幕后指使。貌似你现在不得不放弃这次远征。;;;;;;;;;;x
 EVTDESCB_WOL_10110;你雇佣去偷取船只的土匪已经失败，更糟糕的是，他们中的一些人被捕，并透露了幕后指使。貌似你现在不得不放弃这次远征。;;;;;;;;;;x
-EVTOPTA_WOL_10110;这真是太可怕了!;;;;;;;;;;x
+EVTOPTA_WOL_10110;这真是太可怕了！;;;;;;;;;;x
 EVTDESC_WOL_10111;现在是时候让探险队去为你去的独特的商品，以达到盈利的目的。;;;;;;;;;;x
-EVTOPTA_WOL_10111;让我们前往外国的土地。;;;;;;;;;;x
-EVTDESC_WOL_10114;探险队终于到达[From.GetTitledFirstName]的领地。你的管家问你送什么礼物，我们将会为[From.GetTitledFirstName]带来的友谊的象征。;;;;;;;;;;x
-EVTOPTA_WOL_10114_HORSES;十几匹强壮的马;;;;;;;;;;x
-EVTOPTA_WOL_10114_ELEPHANT;一头强壮的大象;;;;;;;;;;x
-EVTOPTA_WOL_10114_WARRIORS;十几个强悍的战士;;;;;;;;;;x
-EVTOPTA_WOL_10114_CAMELS;十几匹强壮的骆驼;;;;;;;;;;x
+EVTOPTA_WOL_10111;让我们前往外国的土地！;;;;;;;;;;x
+EVTDESC_WOL_10114;探险队终于到达[From.GetTitledFirstName]的领地。你的管家问你要送什么礼物，作为与[From.GetTitledFirstName]友谊的象征。;;;;;;;;;;x
+EVTOPTA_WOL_10114_HORSES;十几匹强壮的马。;;;;;;;;;;x
+EVTOPTA_WOL_10114_ELEPHANT;一头强壮的大象。;;;;;;;;;;x
+EVTOPTA_WOL_10114_WARRIORS;十几个强悍的战士。;;;;;;;;;;x
+EVTOPTA_WOL_10114_CAMELS;十几匹强壮的骆驼。;;;;;;;;;;x
 EVTOPTB_WOL_10114;家里放衣服的箱子;;;;;;;;;;x
-EVTOPTC_WOL_10114;存放珍贵药材的袋子;;;;;;;;;;x
+EVTOPTC_WOL_10114;一小袋儿珍贵的草药。;;;;;;;;;;x
 EVTOPTD_WOL_10114;我的礼节应该带上足够的礼物;;;;;;;;;;x
 EVTDESC_WOL_10116;你注意到[From.GetBestName]'的脸越来越红，因为他瞪着你的招待者正在以野蛮的方式吃饭。;;;;;;;;;;x
-EVTOPTB_WOL_10116;请原谅 [steward.GetHerHim]， 我仍然想教导这个野蛮人文明礼仪。;;;;;;;;;;x
-EVTOPTC_WOL_10116;我也饿了。;;;;;;;;;;x
+EVTOPTB_WOL_10116;请原谅 [steward.GetHerHim]， 我还在试图教导这个野蛮人文明的礼仪。;;;;;;;;;;x
+EVTOPTC_WOL_10116;我也饿了！;;;;;;;;;;x
 EVTDESCA_WOL_10120;当你花时间更多的时间与[From.GetBestName]讨论你会知道你们俩很多共同的事可以做。;;;;;;;;;;x
 EVTDESCB_WOL_10120;经过长时间的讨论如何继续你和[From.GetBestName]的交易后得出了一个结论。;;;;;;;;;;x
 EVTDESCC_WOL_10120;那场在你和[From.GetBestName]之间展开的愈发艰难的谈判被突然打断了，猛然间[From.GetBestName]将[From.GetHerHis]的拳头砸在了桌子上. 看来[From.GetSheHe]无法忍受你出现在屋子内，当你决定离开时他在你背后大声吼道'[GetFromRootInsult]'.;;;;;;;;;;x
@@ -154,7 +154,7 @@ EVTOPTC_WOL_10205;我们可以用一些城堡里的老材料。;;;;;;;;;;x
 EVTDESC_WOL_10206;您在[This.Capital.GetName]修筑的高塔发生了事故，一对工人夫妇被一块从绳子上掉落的花岗岩砸中，丈夫当场死亡。当地居民现在要求您进行更严格的安全培训并赔偿发生失去男人的悲剧的家庭。;;;;;;;;;;x
 EVTOPTA_WOL_10206;这些农民都是消耗品.;;;;;;;;;;x
 EVTOPTB_WOL_10206;我会补偿家属的损失。;;;;;;;;;;x
-EVTDESC_WOL_10207;在向全省提供了几十年建筑材料后，[Root.GetName] 的采石场因为不再能产出高质量的石材，已经停工了。;;;;;;;;;;x
+EVTDESC_WOL_10207;在向全省提供了几十年建筑材料后，[Root.GetName] 的采石场因为不再能产出高品质的石材，已经停工了。;;;;;;;;;;x
 EVTOPTA_WOL_10207;这太糟糕了。;;;;;;;;;;x
 EVTDESC_WOL_10210;[From.GetBestName]的报告使你在宫廷中心烦意乱。 [From.GetSheHeCap]已经看到，现在塔楼继续向上延伸，已经快要高过教堂了。 [From.GetSheHeCap]提高了[From.GetHerHis]的声音，几乎尖叫“这是不可接受的行为。无论你怎么尝试也不能遮蔽进入天堂的路，这是一个重要教会事务！“。;;;;;;;;;;x
 EVTOPTA_WOL_10210;回到你的旧计划上。;;;;;;;;;;x
@@ -329,7 +329,7 @@ EVTDESC_WoL_4162_not_money_they_suggest;[From.GetTitledFirstName]拿出了板子
 EVTOPTA_WoL_4162;很好，开始吧!;;;;;;;;;;x
 EVTDESC_WoL_4163_win;你们玩了几个小时, 你试图在不暴露自身防御破绽的同时攻击你的对手，幸运的潮水逐渐退去. 终于, 你找到了一个对方一个致命的破绽, 做了几个富有激情而又侵略性的移动赢得了游戏.;;;;;;;;;;x
 EVTDESC_WoL_4163_loss;你们玩了几个小时, 你试图在不暴露自身防御破绽的同时攻击你的对手，幸运的潮水逐渐退去. 最后, 无可奈何地, 你犯了一个致命错误, 你的对手利用了这一点, 你输掉了游戏.;;;;;;;;;;x
-EVTOPTA_WoL_4163;荣耀归于[Root.GetTitle]!;;;;;;;;;;x
+EVTOPTA_WoL_4163;向[Root.GetTitle]致敬！;;;;;;;;;;x
 EVTOPTB_WoL_4163;下次我会击败你.;;;;;;;;;;x
 EVTDESC_WOL_11000;[FromFrom.GetBestName]向你发起决斗. 唯一不损荣誉的回应只能是接受这个挑战.;;;;;;;;;;x
 EVTOPTA_WOL_11000;接受挑战.;;;;;;;;;;x
@@ -346,7 +346,7 @@ EVTOPTA_WOL_11006;以胜利者的姿势离去.;;;;;;;;;;x
 EVTOPTB_WOL_11006;以胜利者的姿势离去.;;;;;;;;;;x
 EVTOPTC_WOL_11006;绝不留情!;;;;;;;;;;x
 EVTDESCA_WOL_11007;你向着你的对手[From.GetBestName]的方向踏出一步，并且举起了剑。战斗开始时气氛很紧张，你和对手都挡住了对方的重击，谁也不知道你们中的哪一个能获胜；终于，你的一次攻击被[From.GetBestName]架住，并且抓住了这一次机会，随着你感受到一阵剧痛，的武器也斩开了你毫无防备的持械手，你像一头发了狂的熊一样嚎叫着结束了这一场失败的决斗.;;;;;;;;;;x
-EVTDESCB_WOL_11007;决斗十分激烈，你的战术是不断的击打[From.GetBestName]的武器使其卷刃. 然而，看上去你没法压制住[From.GetHerHis]，[From.GetSheHe]很轻松的格挡或者闪开了你的每一次进攻. 随着决斗进行你感到越来越疲惫，并且发现要预测[From.GetBestName]的下一步动作变得愈发困难. 当你试图回避一个高位攻击的时候你内心咒骂身体的迟钝，然而[From.GetSheHe]利用假动作对你的下盘发动了攻击，你的双腿被砍中. 伤口并不致命，但是这道伤口妨碍了你的移动，你很勉强才能挡住对方的进攻.;;;;;;;;;;x
+EVTDESCB_WOL_11007;决斗十分激烈，你的战术是不断的击打[From.GetBestName]的武器使其卷刃。然而，看上去你没法压制住[From.GetHerHis]，[From.GetSheHe]很轻松的格挡或者闪开了你的每一次进攻。随着决斗进行你感到越来越疲惫，并且发现要预测[From.GetBestName]的下一步动作变得愈发困难。当你试图回避一个高位攻击的时候你内心咒骂身体的迟钝，然而[From.GetSheHe]利用假动作对你的下盘发动了攻击，你的双腿被砍中。伤口并不致命，但是这道伤口妨碍了你的移动，你很勉强才能挡住对方的进攻。;;;;;;;;;;x
 EVTOPTA_WOL_11007;天杀的!;;;;;;;;;;x
 EVTDESCA_WOL_11009;比赛一开始 你就朝着 [opponent.GetBestName] 发动攻势. [opponent.GetSheHeCap] 同样也很凶猛, 而且发动了几次你几乎没有躲避开的攻势. 你听到人们聚拢来观看你们之间的打斗 被场上的气势所震慑. 他们的害怕并不让人奇怪, 你们两人都对对方发动了许多次有效的攻击, 一个不那么勇敢的人早就被所受的伤击倒了. 决斗继续进行 两人都不愿意认输, 很快的你成功地攻击到了 [opponent.GetFirstName] 的侧身, 造成致命的伤害. 有那么一阵子你看到了胜利的曙光, 但当你的气势稍有衰退, 你被疼痛感淹没了. 一低头, 你发现 [opponent.GetFirstName] 的刀刃直插你的腹部.;;;;;;;;;;x
 EVTDESCB_WOL_11009;比赛一开始 你就朝着 [challenger.GetBestName] 发动攻势. [challenger.GetSheHeCap] 同样也很凶猛, 而且发动了几次你几乎没有躲避开的攻势. 你听到人们聚拢来观看你们之间的打斗 被场上的气势所震慑. 他们的害怕并不让人奇怪, 你们两人都对对方发动了许多次有效的攻击, 一个不那么勇敢的人早就被所受的伤击倒了. 决斗继续进行 两人都不愿意认输, 很快的你成功地攻击到了 [challenger.GetFirstName] 的侧身, 造成致命的伤害. 有那么一阵子你看到了胜利的曙光, 但当你的气势稍有衰退, 你被疼痛感淹没了. 一低头, 你发现 [challenger.GetFirstName] 的刀刃直插你的腹部.;;;;;;;;;;x
@@ -446,7 +446,7 @@ EVTDESC_WOL_10410;"[From.GetName]有一群木匠越来越抱团, 无论工作还
 EVTOPTA_WOL_10410;我支持这些木匠.;;;;;;;;;;x
 EVTOPTB_WOL_10410;宣布公会非法.;;;;;;;;;;x
 artisan_workshop;艺术工坊;;;;;;;;;;x
-desc_artisan_workshop;这个省份有一个工坊，出产高质量的货物。;;;;;;;;;;x
+desc_artisan_workshop;这个省份有一个工坊，出产高品质的货物。;;;;;;;;;;x
 sold_off_land;土地被卖给了市民;;;;;;;;;;x
 desc_sold_off_land;统治者售出了土地以换取短期利润.;;;;;;;;;;x
 EVTDESC_WOL_10500;"自从你为了更多的财富开始计算收支, 你的钱包相比以前似乎充实了很多.";;;;;;;;;;x
