--- a/localisation/v2_42.csv
+++ b/localisation/v2_42.csv
@@ -1,8 +1,8 @@
-﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 create_aragon_desc;在这些土地建立阿拉贡王国，我将开启一个新纪元。;;;;;;;;;;x
 create_portugal_desc;在这些土地建立葡萄牙王国，我将开启一个新纪元。;;;;;;;;;;x
-create_castille_desc;在这些土地建立卡斯蒂尔王国，我将开启一个新纪元。;;;;;;;;;;x
-EVTDESC_39617;致[GetFromRootCompliment][Root.GetTitledFirstName]：\n\n我们的领主，[GetRootFromCompliment][From.GetTitledNameWithNick]，经过[From.GetHerHis]伟大智慧思考后，决定皈依[From.Religion.GetName]信仰。作为[From.GetHerHis][From.GetLordSpiritualName]，我建议你也考虑皈依该信仰。\n\n愿受[From.Religion.GetRandomGodName]驱策，\n[convert_lord_spiritual.GetBestName]，[From.PrimaryTitle.GetName]之[From.GetLordSpiritualName];;;;;;;;;;x
+create_castille_desc;在这些土地建立卡斯提尔王国，我将开启一个新纪元。;;;;;;;;;;x
+EVTDESC_39617;致[GetFromRootCompliment] [Root.GetTitledFirstName]：\n\n我们的领主，[GetRootFromCompliment] [From.GetTitledNameWithNick]，经过[From.GetHerHis]伟大智慧思考后，决定皈依[From.Religion.GetName]信仰。作为[From.GetHerHis] [From.GetLordSpiritualName]，我建议你也考虑皈依该信仰。\n\n愿受[From.Religion.GetRandomGodName]驱策，\n[convert_lord_spiritual.GetBestName]，[From.PrimaryTitle.GetName]之[From.GetLordSpiritualName];;;;;;;;;;x
 EVTOPTA_39617;正合我意，我会皈依这一新的信仰！;;;;;;;;;;x
 EVTOPTB_39617;不，[Root.Religion.GetRandomGodName]始终与我同在！;;;;;;;;;;x
 EVTOPTC_39617;你们信仰的恶神不过是土鸡瓦狗！;;;;;;;;;;x
@@ -11,30 +11,30 @@ EVTDESC62925;[From.GetDynName]已在西班牙创建一个新的[From.PrimaryTitl
 EVTDESC62927;[From.GetDynName]已在西班牙创建一个新的[From.PrimaryTitle.GetTier]，而且现在是[From.PrimaryTitle.GetName]的最高统治者！;;;;;;;;;;x
 EVTDESC62921;[From.GetDynName]已决定成立莱昂[From.PrimaryTitle.GetTier]，古老的阿斯图里亚斯[From.PrimaryTitle.GetTier]不复存在！;;;;;;;;;;x
 SM_CONTEXTSOUND;动态环境音效;;;;;;;;;;x
-BUILD_FORT_DESC;要塞可以在你控制的任何一个省份建造，也可以在你当前军队驻扎的敌对省份建造。建造消耗 §Y$COST$§!¤。要塞可以帮助锁定你占领的游牧空地，还能使你在一些原始宗教家园不再受到巨量损耗惩罚。;;;;;;;;;;x
+BUILD_FORT_DESC;要塞可以在你控制的任何一个省份建造，也可以在你当前军队驻扎的敌对省份建造。建造要塞将花费§Y$COST$§!¤。要塞可以帮助锁定你占领的游牧空地，还能使你在一些原始宗教家园不再受到巨量损耗惩罚。;;;;;;;;;;x
 POPULATION_EFFECT_SCALED;人口的$DIRECTION$$VALUE$;;;;;;;;;;x
 DISBAND_SUBUNIT;解散军团;;;;;;;;;;x
 CONFIRM_DISBAND_TITLE_SUBUNIT;你想要解散这支军团吗？;;;;;;;;;;x
 create_aragon;创建阿拉贡;;;;;;;;;;x
 create_portugal;创建葡萄牙;;;;;;;;;;x
-create_castille;创建卡斯蒂尔;;;;;;;;;;x
+create_castille;创建卡斯提尔;;;;;;;;;;x
 EVTTOOLTIP72035;[This.GetTitledFirstName]已知道与你作对的下场。;;;;;;;;;;x
 MERCHANT_REPUBLICS_CANNOT_MOVE_CAPITAL;商业共和国不允许迁都，除非是从没有港口的省份迁往有港口的省份;;;;;;;;;;x
 PRESTIGE_LAW_PASSED_SETUP;法律制定;;;;;;;;;;x
 GOV_BUILD_WITH_PIETY_DESC;用虔诚建造$HOLDINGS_LIST$地产;;;;;;;;;;x
-GOVERNMENT_VASSALS_LESS_THAN;拥有少于§Y$NUM$§!§Y$GOVERNMENT$§!的封臣;;;;;;;;;;x
-GOVERNMENT_VASSALS_AT_LEAST;拥有至少§Y$NUM$§!§Y$GOVERNMENT$§!的封臣;;;;;;;;;;x
+GOVERNMENT_VASSALS_LESS_THAN;拥有少于§Y$NUM$§!个§Y$GOVERNMENT$§!的封臣;;;;;;;;;;x
+GOVERNMENT_VASSALS_AT_LEAST;拥有至少§Y$NUM$§!个§Y$GOVERNMENT$§!的封臣;;;;;;;;;;x
 FEATURES;特点;;;;;;;;;;x
-HINT_SPLASH_2_INTRO;你正在扮演[Culture.GetName][Religion.GetName][PrimaryTitle.GetRulerTitle]！;;;;;;;;;;x
+HINT_SPLASH_2_INTRO;你正在扮演[Culture.GetName] [Religion.GetName] [PrimaryTitle.GetRulerTitle]！;;;;;;;;;;x
 UNSELECT_CHAR;取消选择角色;;;;;;;;;;x
-tribal_governments_FEATURES;§Y*§! 可以改革成封建制，伊克塔制和商业共和制政体;;;;;;;;;;x
-nomadic_governments_FEATURES;§Y*§! 可以改革成封建政体、伊克塔政体、商业共和制政体\n §Y*§! 可以抢劫聚落来获取财富和科技\n§Y*§! 可以放弃省份来加快人口和人力增长;;;;;;;;;;x
-GOVERNMENT_UNLOCKS;政体解锁;;;;;;;;;;x
-REVOKE_TITLE_INTERACTION_2G;我们的$GOVERNMENT$管治允许我们收回§Y$TIER$§!头衔时不会有贵族反对。;;;;;;;;;;x
-IS_DIVINE_BLOOD;§Y$DYNASTY$§!家族可以血亲圣婚;;;;;;;;;;x
-IS_NOT_DIVINE_BLOOD; §Y$DYNASTY$§!不能血亲圣婚;;;;;;;;;;x
-SET_DIVINE_BLOOD;§Y$DYNASTY$§!现在被认为可以血亲圣婚。\n;;;;;;;;;;x
-UNSET_DIVINE_BLOOD; §Y$DYNASTY$§!家族不再进行血亲圣婚。\n;;;;;;;;;;x
+tribal_governments_FEATURES;§Y*§!可以改革成封建制，伊克塔制和商业共和制政体;;;;;;;;;;x
+nomadic_governments_FEATURES;§Y*§!可以改革成封建政体、伊克塔政体、商业共和制政体\n§Y*§!可以抢劫聚落来获取财富和科技\n§Y*§!可以放弃省份来加快人口和人力增长;;;;;;;;;;x
+GOVERNMENT_UNLOCKS;政体解锁：;;;;;;;;;;x
+REVOKE_TITLE_INTERACTION_2G;我们的$GOVERNMENT$管治允许我们收回§Y$TIER$§!头衔时不会引起贵族反对。;;;;;;;;;;x
+IS_DIVINE_BLOOD;§Y$DYNASTY$§!家族可以进行血亲圣婚;;;;;;;;;;x
+IS_NOT_DIVINE_BLOOD; §Y$DYNASTY$§!家族不能进行血亲圣婚;;;;;;;;;;x
+SET_DIVINE_BLOOD;§Y$DYNASTY$§!家族现在被认为可以进行血亲圣婚。\n;;;;;;;;;;x
+UNSET_DIVINE_BLOOD; §Y$DYNASTY$§!家族不再被认为可以进行血亲圣婚。\n;;;;;;;;;;x
 AIREASON_AMBITION;野心;;;;;;;;;;x
 b_kroran;楼兰;;;;;;;;;;x
 b_endere;安得悦;;;;;;;;;;x
@@ -54,7 +54,7 @@ b_wutanzili;乌贪訾离;;;;;;;;;;x
 b_huhu;狐胡;;;;;;;;;;x
 b_loulan;楼兰;;;;;;;;;;x
 b_kargan;鄯善;;;;;;;;;;x
-b_ruoqiang;若羌;;;;;;;;;;x
+b_ruoqiang;婼羌;;;;;;;;;;x
 b_mocheng;末城;;;;;;;;;;x
 b_zuomo;左末;;;;;;;;;;x
 b_yuling;扜零;;;;;;;;;;x
@@ -66,7 +66,7 @@ b_wulei;乌垒;;;;;;;;;;x
 b_bay;拜城;;;;;;;;;;x
 b_toqsu;新和;;;;;;;;;;x
 b_awat;阿瓦提;;;;;;;;;;x
-b_kelpin;阔纳齐兰;;;;;;;;;;x
+b_kelpin;柯坪;;;;;;;;;;x
 b_fukang;阜康;;;;;;;;;;x
 b_qiemi;且弥;;;;;;;;;;x
 b_balikun;巴里坤;;;;;;;;;;x
@@ -77,11 +77,11 @@ b_karghalik;斫句迦;;;;;;;;;;x
 b_weixu;危须;;;;;;;;;;x
 b_weili;尉犁;;;;;;;;;;x
 b_weitou;尉头;;;;;;;;;;x
-CHRONICLE_ADOPTED_FEUDALISM;[From.GetDynName]在[From.GetHerHis]境内放弃了传统的部落生活，接受了封建化.;;;;;;;;;;x
+CHRONICLE_ADOPTED_FEUDALISM;[From.GetDynName]在[From.GetHerHis]境内放弃了传统的部落风俗，接受了封建化。;;;;;;;;;;x
 b_poskam;泽普;;;;;;;;;;x
 b_yopurga;岳普湖;;;;;;;;;;x
 b_atush;阿图什;;;;;;;;;;x
-b_akto;阿克土;;;;;;;;;;x
+b_akto;阿克托;;;;;;;;;;x
 b_ulugqat;乌恰;;;;;;;;;;x
 b_uqturpan;乌什;;;;;;;;;;x
 b_aral;阿拉尔;;;;;;;;;;x
@@ -98,7 +98,7 @@ b_subashi;苏巴什;;;;;;;;;;x
 b_kumtura;库木吐喇;;;;;;;;;;x
 b_bezeklik;柏孜克里克;;;;;;;;;;x
 b_astana;阿斯塔那;;;;;;;;;;x
-b_manas;马纳思;;;;;;;;;;x
+b_manas;玛纳斯;;;;;;;;;;x
 b_changjo;仰吉八里;;;;;;;;;;x
 b_kara_koshun;喀拉库顺;;;;;;;;;;x
 b_lopnor;罗布泊;;;;;;;;;;x
@@ -107,7 +107,7 @@ b_kumtag;库姆塔格;;;;;;;;;;x
 b_yingpan;营盘;;;;;;;;;;x
 b_yiwu;伊吾;;;;;;;;;;x
 b_dahe;大河;;;;;;;;;;x
-b_piqan;蒲昌;;;;;;;;;;x
+b_piqan;皮羌;;;;;;;;;;x
 b_yanghai;洋海;;;;;;;;;;x
 b_toyuq;吐峪沟;;;;;;;;;;x
 b_nanhu_tarim;南湖;;;;;;;;;;x
@@ -129,8 +129,8 @@ ANSWER_NO;不。;;;;;;;;;;x
 b_yumen;玉门;;;;;;;;;;x
 CHRONICLE_FOUNDED_MERCHANT_REPUBLIC;[From.GetDynName]在[From.GetHerHis]境内放弃古老的部落风俗，成立商业共和国。;;;;;;;;;;x
 nomadic_emperor_female;可敦;;;;;;;;;;x
-nomadic_king_female;可努;;;;;;;;;;x
-e_chagatai;察合台汗;;;;;;;;;;x
+nomadic_king_female;汗努;;;;;;;;;;x
+e_chagatai;察合台;;;;;;;;;;x
 FACTIONS_MENU;§Y派系§!;;;;;;;;;;x
 CLANS_MENU;§Y部族§!;;;;;;;;;;x
 THE_REPUBLIC_MENU;§Y共和国§!;;;;;;;;;;x
@@ -149,12 +149,12 @@ STAT_MANPOWER_MENU;§Y人力§!;;;;;;;;;;x
 TECHNOLOGY;科技;;;;;;;;;;x
 LAW;法律;;;;;;;;;;x
 MILITARY;军事;;;;;;;;;;x
-INTRIGUE;阴谋;;;;;;;;;;x
+INTRIGUE;密谋;;;;;;;;;;x
 DEMESNE_INTERFACE_LABEL;§Y直辖领§!;;;;;;;;;;x
 TRADE_INTERFACE_LABEL;§Y贸易§!;;;;;;;;;;x
 FORTS_INTERFACE_LABEL;§Y堡垒§!;;;;;;;;;;x
 SIEGES_INTERFACE_LABEL;§Y围城§!;;;;;;;;;;x
-ENEMY_SIEGES_INTERFACE_LABEL;§Y敌对围城§!;;;;;;;;;;x
+ENEMY_SIEGES_INTERFACE_LABEL;§Y敌军围城§!;;;;;;;;;;x
 COMBATS_INTERFACE_LABEL;§Y陆战§!;;;;;;;;;;x
 ARMIES_INTERFACE_LABEL;§Y军队§!;;;;;;;;;;x
 NAVIES_INTERFACE_LABEL;§Y舰队§!;;;;;;;;;;x
@@ -162,7 +162,7 @@ MESSAGERULES_INTERFACE_LABEL;§Y信息规则§!;;;;;;;;;;x
 SPECIAL_INTEREST_CHARACTERS_INTERFACE_LABEL;§Y特别关注人物§!;;;;;;;;;;x
 OL_COURT_INTERFACE_LABEL;§Y宫廷§!;;;;;;;;;;x
 OL_MP_PLAYERLIST_INTERFACE_LABEL;§Y多人游戏玩家§!;;;;;;;;;;x
-OL_DISABLED_ALERTS_INTERFACE_LABEL;§Y关闭的警报§!;;;;;;;;;;x
+OL_DISABLED_ALERTS_INTERFACE_LABEL;§Y关闭警告§!;;;;;;;;;;x
 MESSWINDOW_HIGHPRIO_INTERFACE_LABEL;§Y高优先级信息§!;;;;;;;;;;x
 MESSWINDOW_LOWPRIO_INTERFACE_LABEL;§Y低优先级信息§!;;;;;;;;;;x
 FC_FIND_CHARACTERS_INTERFACE_LABEL;§Y寻找角色§!;;;;;;;;;;x
@@ -181,9 +181,9 @@ b_qinggil;青河;;;;;;;;;;x
 b_koktokay;可可托海;;;;;;;;;;x
 b_burqin;布尔津;;;;;;;;;;x
 b_burultokay;福海;;;;;;;;;;x
-b_kokagax;喀拉玛盖;;;;;;;;;;x
+b_kokagax;阔克阿尕什;;;;;;;;;;x
 b_jeminay;吉木乃;;;;;;;;;;x
-b_beshbalik;吉木萨尔;;;;;;;;;;x
+b_beshbalik;别失八里;;;;;;;;;;x
 b_gucheng;固城;;;;;;;;;;x
 b_mori;木垒;;;;;;;;;;x
 b_jiangjunmiao;将军庙;;;;;;;;;;x
@@ -197,29 +197,29 @@ b_chadaana;恰丹;;;;;;;;;;x
 b_ulala;乌啦啦;;;;;;;;;;x
 b_ulagan;乌拉甘;;;;;;;;;;x
 b_sayan;萨杨;;;;;;;;;;x
-b_khori_tumed;霍里;;;;;;;;;;x
+b_khori_tumed;豁里秃马;;;;;;;;;;x
 b_kyren;凯任;;;;;;;;;;x
 b_kutulik;库图利克;;;;;;;;;;x
 b_tulun;图伦;;;;;;;;;;x
 b_korya;库里亚;;;;;;;;;;x
 b_semey;塞米伊;;;;;;;;;;x
-b_aqsw;阿克苏;;;;;;;;;;x
+b_aqsw;阿奎斯沃;;;;;;;;;;x
 b_ekibastuz;埃基巴斯图兹;;;;;;;;;;x
 b_ertis;额尔齐斯;;;;;;;;;;x
-b_koktobe;阿拉木;;;;;;;;;;x
+b_koktobe;科克托别;;;;;;;;;;x
 b_abaza;阿巴扎;;;;;;;;;;x
 b_tashtyp;塔什特普;;;;;;;;;;x
-b_terkhiin_tsagaan;查干淖;;;;;;;;;;x
-b_ogii;乌给;;;;;;;;;;x
-b_tsetserleg;车尔勒格;;;;;;;;;;x
+b_terkhiin_tsagaan;特尔金查干;;;;;;;;;;x
+b_ogii;额吉;;;;;;;;;;x
+b_tsetserleg;车车尔勒格;;;;;;;;;;x
 b_uliastai;乌里雅苏台;;;;;;;;;;x
 b_orgil;敖尔吉勒;;;;;;;;;;x
 b_erdenet;额尔登特;;;;;;;;;;x
 b_luut;都特;;;;;;;;;;x
 b_noin_ula;诺颜乌拉;;;;;;;;;;x
 b_zuunmod;宗莫德;;;;;;;;;;x
-b_khamag;蒙兀;;;;;;;;;;x
-b_lun;伦;;;;;;;;;;x
+b_khamag;哈木黑;;;;;;;;;;x
+b_lun;隆;;;;;;;;;;x
 b_bayan;巴彦;;;;;;;;;;x
 b_darkhan;达尔汗;;;;;;;;;;x
 b_bargujin;巴尔古津;;;;;;;;;;x
@@ -228,13 +228,13 @@ b_kyakhta;恰克图;;;;;;;;;;x
 b_uda;乌达;;;;;;;;;;x
 b_galuuta;嘎卢特;;;;;;;;;;x
 b_barkul;巴里坤;;;;;;;;;;x
-b_khoid;科伊;;;;;;;;;;x
+b_khoid;辉特;;;;;;;;;;x
 b_erdene;额尔德尼;;;;;;;;;;x
-b_gurvantes;古尔班斯特;;;;;;;;;;x
+b_gurvantes;古尔班特斯;;;;;;;;;;x
 b_khereid;克烈;;;;;;;;;;x
 b_zubu;阻卜;;;;;;;;;;x
 b_nuuruudyn_hondij;浅海子;;;;;;;;;;x
-b_arguut;塔拉格特;;;;;;;;;;x
+b_arguut;额勒济特;;;;;;;;;;x
 b_khuld;呼勒德;;;;;;;;;;x
 b_naiman;乃蛮;;;;;;;;;;x
 b_khovd;科布多;;;;;;;;;;x
@@ -243,15 +243,15 @@ b_mankhan;曼汗;;;;;;;;;;x
 b_darvi;达尔维;;;;;;;;;;x
 b_khaliun;哈伦;;;;;;;;;;x
 HAS_LESS_SETTLEMENTS;少于§Y$VAL$§!地产。;;;;;;;;;;x
-HAS_LEAST_SETTLEMENTS;至少§Y$VAL$§!地产;;;;;;;;;;x
-messalian_FEATURES;§Y*§! 女性可以担任所有枢密大臣职务\n§Y*§! 女性可以带领军队;;;;;;;;;;x
+HAS_LEAST_SETTLEMENTS;至少§Y$VAL$§!地产。;;;;;;;;;;x
+messalian_FEATURES;§Y*§!女性可以担任所有内阁职务\n§Y*§!女性可以带领军队;;;;;;;;;;x
 CONFIRM_BUILD_EXTRA_PRESTIGE_OR_PIETY_HOLDING_DESC;你确定想建立一座$TYPE$？\n它将花费你§Y$COST$§!并将于§Y$FINISHED$§!完成;;;;;;;;;;x
 EVTDESC_HL_10501B;[eloper.GetFirstName]与臭名昭著的雇佣兵[From.GetFirstName]私奔了。;;;;;;;;;;x
 PRESTIGE_LAW_PASSED_LOG;§Y$RULER$§!已经在§Y$TITLE$§!制订了§Y$LAW$§!法。;;;;;;;;;;x
 EVTTITLE_HL_1031;狼之[From.GetSonDaughter]？;;;;;;;;;;x
-EVTNAME62923;卡斯蒂利亚之[From.PrimaryTitle.GetTier];;;;;;;;;;x
+EVTNAME62923;卡斯提尔之[From.PrimaryTitle.GetTier];;;;;;;;;;x
 EVTNAME62925;葡萄牙之[From.PrimaryTitle.GetTier];;;;;;;;;;x
 EVTNAME62927;阿拉贡之[From.PrimaryTitle.GetTier];;;;;;;;;;x
-CONTAINS_UNAVAILABLE_DECISION_UNLOCKS;解锁未对你角色开放的决议;;;;;;;;;;x
-LAND_OF_CLAN;§Y由$CLAN$§!部族持有的游牧省份;;;;;;;;;;x
+CONTAINS_UNAVAILABLE_DECISION_UNLOCKS;解锁尚未对你角色开放的决议。;;;;;;;;;;x
+LAND_OF_CLAN;§Y由$CLAN$部族持有的游牧省份§!;;;;;;;;;;x
 CAPTAIN_female; ;;;;;;;;;;x
